# ubat

./: .clangd  .file-consolidator-ignore  .gitignore  .sconsign.dblite  CLAUDE.md  Node3D.gd  Node3D.gd.uid  README.md  SConstruct  compile_commands.json  export_presets.cfg  game_config.toml  icon.svg.import  mai32BD.tmp  mai3A6E.tmp  mai3B16.tmp  mai47EA.tmp  mai60A4.tmp  mai659D.tmp  mai6A52.tmp  mai6D86.tmp  mai7090.tmp  mai8364.tmp  maiB98C.tmp  maiBEC.tmp  maiC4FE.tmp  maiDF3F.tmp  main.tscn  project.godot  test_world.tscn
addons/ubat/: Cargo.toml  extension.gdextension  ubat.gdextension  ubat.gdextension.uid
addons/ubat/src/: lib.rs  myextention.rs
addons/ubat/src/Core/: game_manager.rs
addons/ubat/src/Networking/: network_manager.rs  object_manager.rs  world_manager.rs
addons/ubat/src/Resource/: resource_manager.rs
addons/ubat/src/Terrain/: terrain_manager.rs
addons/ubat/src/bridge/: bridge_system_connector.rs  config_bridge.rs  event_bridge.rs  game_bridge.rs  game_init_helper.rs  mod.rs  network_bridge.rs  terrain_bridge.rs
addons/ubat/src/config/: config_manager.rs  global_config.rs  mod.rs
addons/ubat/src/core/: config_manager.rs  event_bus.rs  game_manager.rs  mod.rs  world_manager.rs
addons/ubat/src/initialization/: configuration_service.rs  mod.rs  system_initializer.rs  world_initializer.rs
addons/ubat/src/networking/: mod.rs  network_manager.rs  object_manager.rs  physics_manager.rs  world_manager.rs
addons/ubat/src/resource/: resource_manager.rs
addons/ubat/src/terrain/: biome_manager.rs  chunk_controller.rs  chunk_handler.rs  (+12 more)
(+312 files in other folders)
