[package]
name = "ubat"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8.0"
num_cpus = "1.16.0"
noise = "0.8.2" # Or latest compatible version

bincode = "1.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
once_cell = "1.21.3"
serde_derive = "1.0.219"
lru = "0.14.0"

[lib]
crate-type = ["cdylib"]
